--- a/build.gradle
+++ b/build.gradle
@@ -8,24 +8,24 @@ greddle {
 }
 
 meddle {
-    version = "1.2.2"
+    version = "1.3"
 }
 
 dynamicmappings {
-    version = "018"
+    version = "027"
 }
 
 meddleapi {
-    version = "1.0.5"
+    version = "1.0.6"
 }
 
 minecraft {
-    version = '15w44a'
+    version = '16w32b'
 }
 
 jar {
     baseName = 'meddleguide'
-    version = '1.0.1'
+    version = '1.0.2'
     
     manifest {
 		attributes('MeddleAPI-Mods' : 'net.fybertech.meddleguide.MeddleGuideMod')
